feat: Implement film rating summary feature with gRPC integration and enrich FilmResponse